--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@rematch/persist": "^0.2.1",
     "@rematch/updated": "^0.1.5",
     "lodash": "^4.17.10",
-    "material-ui": "next",
+    "material-ui": "^1.0.0-beta.47",
     "material-ui-chip-input": "^1.0.0-beta.4",
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
